Update package json scripts

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "astro dev --remote",
     "build": "astro check && astro build --remote",
-    "preview": "astro build && wrangler pages dev",
+    "preview": "astro build --remote && wrangler pages dev",
     "astro": "astro",
-    "deploy": "astro build && wrangler pages deploy",
+    "deploy": "astro build --remote && wrangler pages deploy",
     "cf-typegen": "wrangler types"
   },
   "dependencies": {
