--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --remote",
     "start": "astro dev --remote",
     "build": "astro check && astro build --remote",
     "preview": "astro build --remote && wrangler pages dev",
